# Computer-Graphics-Pub

./: README.md
Final/: readme.md
Final/code/: .gitignore  CMakeLists.txt  run_all.sh
Final/code/include/: aabb.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  image.hpp  kdtree.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ppm.hpp  pt.hpp  ray.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
Final/code/src/: aabb.cpp  group.cpp  image.cpp  kdtree.cpp  main.cpp  mesh.cpp  plane.cpp  ppm.cpp  pt.cpp  revsurface.cpp  scene_parser.cpp  sphere.cpp  triangle.cpp  utils.cpp
Final/code/testcases/: scene02_depth.txt  scene02_office.txt
PA0/: README.md
PA0/code/: .gitignore  run_all.sh  run_test.sh
PA0/code/include/: element.hpp
PA0/code/testcases/: canvas03_radar.txt  canvas04_android.txt
PA1/: readme.md
PA1/code/: CMakeLists.txt  run_all.sh
PA1/code/include/: camera.hpp  group.hpp  material.hpp  object3d.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA1/code/src/: group.cpp  main.cpp  mesh.cpp  plane.cpp  sphere.cpp  triangle.cpp
PA2/: readme.md
PA2/code/include/: group.hpp  material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA2/code/src/: main.cpp
PA3/: readme.md
PA3/code/include/: camera.hpp  curve.hpp  group.hpp  material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA3/code/src/: main.cpp
PA4/code/: PA4_CGAN.py
